--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,12 @@ buildscript {
 }
 
 allprojects {
+
     repositories {
+        mavenCentral()
         google()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
 }
 
