--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,11 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
 //    implementation 'cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     implementation 'com.github.pzienowicz:androidx-auto-scroll-view-pager:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
-
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
 }
