회원가입 api 연동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         tools:targetApi="n">
         <activity android:name=".src.main.SearchActivity" />
         <activity android:name=".src.login.LoginActivity"/>
+        <activity android:name=".src.signUp.SignUpActivity"/>
+        <activity android:name=".src.signUp.EmailSignUpActivity"/>
         <activity android:name="com.softsquared.wadiz.src.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
