프로젝트 상세조회 api 연동

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".src.login.LoginActivity"/>
         <activity android:name=".src.signUp.SignUpActivity"/>
         <activity android:name=".src.signUp.EmailSignUpActivity"/>
+        <activity android:name=".src.projectDetails.ProjectDetailsActivity"/>
         <activity android:name="com.softsquared.wadiz.src.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
