--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:name="com.softsquared.wadiz.src.ApplicationClass"
         android:allowBackup="false"
         android:fullBackupContent="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_foreground"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -22,6 +22,7 @@
         <activity android:name=".src.signUp.SignUpActivity"/>
         <activity android:name=".src.signUp.EmailSignUpActivity"/>
         <activity android:name=".src.projectDetails.ProjectDetailsActivity"/>
+        <activity android:name=".src.projectDetails.rewardPolicy.ActivityFundPolicy"/>
         <activity android:name="com.softsquared.wadiz.src.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
