--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     implementation 'com.google.android.material:material:1.2.0-alpha02'
+
+    implementation 'gun0912.ted:tedpermission:2.2.2'
 }
