--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,13 @@
     package="com.softsquared.wadiz">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+<uses-feature android:name="android.hardware.camera2"/>
 
     <application
-        android:name="com.softsquared.wadiz.src.ApplicationClass"
+        android:name    ="com.softsquared.wadiz.src.ApplicationClass"
         android:allowBackup="false"
         android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher_foreground"
@@ -17,12 +21,24 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="n">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
         <activity android:name=".src.main.SearchActivity" />
         <activity android:name=".src.login.LoginActivity"/>
         <activity android:name=".src.signUp.SignUpActivity"/>
         <activity android:name=".src.signUp.EmailSignUpActivity"/>
         <activity android:name=".src.projectDetails.ProjectDetailsActivity"/>
         <activity android:name=".src.projectDetails.rewardPolicy.FundPolicyActivity"/>
+        <activity android:name=".src.profilePages.editProfile.EditProfileActivity"/>
+        <activity android:name=".src.profilePages.showProfile.ShowProfileActivity"/>
         <activity android:name="com.softsquared.wadiz.src.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
